Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2591,16 +2591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def error(x_values, y_values, m, b, x):\n",
-    "    y_expected = []\n",
-    "    error = []\n",
-    "    for element in x_values:\n",
-    "        y = m* element + b\n",
-    "        y_expected.append(round(y,0))\n",
-    "    for i,j in zip(y_values,y_expected):\n",
-    "        err = i-j\n",
-    "        error.append(err)\n",
-    "    return error[x]"
+    "def error(x_values, y_values, m, b, x):\n"
    ]
   },
   {
