--- a/index.ipynb
+++ b/index.ipynb
@@ -2591,7 +2591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def error(x_values, y_values, m, b, x):\n"
+    "def error(x_values, y_values, m, b, x):\n",
+    "expected= m *x +b "
    ]
   },
   {
