--- a/index.ipynb
+++ b/index.ipynb
@@ -2592,7 +2592,8 @@
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
-    "    expected= m * x + b\n"
+    "    expected= m * x + b\n",
+    "    return y_actual - expe"
    ]
   },
   {
