--- a/index.ipynb
+++ b/index.ipynb
@@ -2560,7 +2560,7 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    expected= m * x + b\n",
-    "    return y_actual - expected"
+    "    return y_actual(x, x_values, y_values) - expected"
    ]
   },
   {
