--- a/index.ipynb
+++ b/index.ipynb
@@ -2624,7 +2624,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    "
+    "    y_hat = m*x + b"
    ]
   },
   {
