--- a/index.ipynb
+++ b/index.ipynb
@@ -2626,7 +2626,8 @@
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    y_hat = m*x + b\n",
     "    y = y_actual(x,x_values,Y_values)\n",
-    "    name = 'error at' + str(x)"
+    "    name = 'error at' + str(x)\n",
+    "    return {'x'}"
    ]
   },
   {
