--- a/index.ipynb
+++ b/index.ipynb
@@ -2627,7 +2627,7 @@
     "    y_hat = m*x + b\n",
     "    y = y_actual(x,x_values,Y_values)\n",
     "    name = 'error at' + str(x)\n",
-    "    return {'x':[x,x], 'y': [y,y_hat]}"
+    "    return {'x':[x,x], 'y': [y,y_hat], 'mode':}"
    ]
   },
   {
