Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2628,7 +2628,7 @@
     "    y = y_actual(x,x_values,Y_values)\n",
     "    name = 'error at' + str(x)\n",
     "    return {'x':[x,x], 'y': [y,y_hat], 'mode': 'lines', \n",
-    "            'marker': {'color': 'red'},"
+    "            'marker': {'color': 'red'}, 'name' : name"
    ]
   },
   {
