--- a/index.ipynb
+++ b/index.ipynb
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2628,7 +2628,7 @@
     "    y = y_actual(x,x_values,Y_values)\n",
     "    name = 'error at' + str(x)\n",
     "    return {'x':[x,x], 'y': [y,y_hat], 'mode': 'lines', \n",
-    "            'marker': {'color': 'red'}, 'name' : name"
+    "            'marker': {'color': 'red'}, 'name' : name}"
    ]
   },
   {
