--- a/index.ipynb
+++ b/index.ipynb
@@ -3754,7 +3754,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    pass"
+    "    return list(map)"
    ]
   },
   {
