--- a/index.ipynb
+++ b/index.ipynb
@@ -5387,7 +5387,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    return error(x_values)"
+    "    return error(x_values,y_values,m,b,x)"
    ]
   },
   {
