--- a/index.ipynb
+++ b/index.ipynb
@@ -5382,12 +5382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    return error(x_values,y_values,m,b,x)"
+    "    return error(x_values,y_values,m,b,x)**2"
    ]
   },
   {
