--- a/index.ipynb
+++ b/index.ipynb
@@ -5424,7 +5424,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    retur"
+    "    return list(map(lambda ))"
    ]
   },
   {
