--- a/index.ipynb
+++ b/index.ipynb
@@ -5424,7 +5424,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x: squared_error(x_values,y_values)))"
+    "    return list(map(lambda x: squared_error(x_values,y_values,m,b,x), ))"
    ]
   },
   {
