--- a/index.ipynb
+++ b/index.ipynb
@@ -5487,19 +5487,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    return sum(squared_errors(x_values, y_values, m, b,))"
+    "    return sum(squared_errors(x_values, y_values, m, b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "327612.2800000001"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "residual_sum_squares(x_values, y_values, 1.7, 10) # 327612.2800000001"
    ]
